# ironmill-oxide

./: .gitignore  README.md  pyproject.toml
ironmill_oxide/: bundler.py  error.py  hash_verifier.py  registry.py  settings.py  util.py
ironmill_oxide/cli/: __init__.py  get_parser.py
ironmill_oxide/cli/commands/: __init__.py  add.py  init.py  install.py  publish.py  rm.py  search.py
test/: test_init.py  test_publish.py
