[tool.poetry]
name = "ironmill-oxide"
version = "0.1.3"
description = ""
authors = ["IronMill"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
prompt-toolkit = "^3.0.39"
requests = "^2.31.0"
semver = "^3.0.1"
colorama = "^0.4.6"

[tool.poetry.scripts]
oxide='ironmill_oxide.cli:main'

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
